// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mdx-component component-parameters.mdx 1`] = `
Object {
  "components": Object {
    "37426d3b0c28836644ead936e512dfa6": Object {
      "from": "../../components/button-named-arrow-func",
      "importedName": "Button",
      "imports": Object {
        "react": Array [
          Object {
            "importedName": "default",
            "name": "React",
          },
        ],
      },
      "name": "Button",
      "request": "/Users/atanasster/cc/core/instrument/test/fixtures/components/button-named-arrow-func.js",
    },
  },
  "doc": Object {
    "component": "Button",
    "componentsLookup": Object {
      "Button": "37426d3b0c28836644ead936e512dfa6",
    },
    "date": 2020-10-28T15:50:29.515Z,
    "dateModified": 2020-10-28T15:50:29.515Z,
    "title": "Storybook/MDX",
  },
  "packages": Object {},
  "stories": Object {},
  "transformed": "
    
    import { Meta } from '@component-controls/blocks';
import { Button } from '../../components/button-named-arrow-func';

<Meta title=\\"Storybook/MDX\\" component={Button} />

",
}
`;

exports[`mdx-component named-alias-import.mdx 1`] = `
Object {
  "components": Object {
    "5d044ee4562dc0dc028fd9cb2727114d": Object {
      "from": "../../components/button-named-class",
      "importedName": "Btn",
      "name": "Button",
    },
  },
  "doc": Object {
    "component": "Button",
    "componentsLookup": Object {
      "Button": "5d044ee4562dc0dc028fd9cb2727114d",
    },
    "date": 2020-10-28T15:50:29.515Z,
    "dateModified": 2020-10-28T15:50:29.515Z,
    "title": "Storybook/MDX",
  },
  "packages": Object {},
  "stories": Object {},
  "transformed": "
    
    import { Meta } from '@component-controls/blocks';
import { Btn as Button } from '../../components/button-named-class';
<Meta title=\\"Storybook/MDX\\" component={Button} />
",
}
`;

exports[`mdx-component propstable-of.mdx 1`] = `
Object {
  "components": Object {
    "3058c83bfd1ea05ca4b611ea98c7f835": Object {
      "from": "../../components/button-default-arrow-func",
      "importedName": "default",
      "imports": Object {
        "react": Array [
          Object {
            "importedName": "default",
            "name": "React",
          },
        ],
      },
      "name": "ArrowButton",
      "request": "/Users/atanasster/cc/core/instrument/test/fixtures/components/button-default-arrow-func.js",
    },
  },
  "doc": Object {
    "componentsLookup": Object {
      "ArrowButton": "3058c83bfd1ea05ca4b611ea98c7f835",
    },
    "date": 2020-10-28T15:50:29.515Z,
    "dateModified": 2020-10-28T15:50:29.515Z,
    "title": "Story",
  },
  "packages": Object {},
  "stories": Object {},
  "transformed": "
    
    import { Meta, PropsTable } from '@component-controls/blocks';
import ArrowButton from '../../components/button-default-arrow-func';

<Meta title=\\"Story\\" />

<PropsTable of={ArrowButton} />

",
}
`;

exports[`mdx-component story-import.mdx 1`] = `
Object {
  "components": Object {
    "a655b73afc93a760272abc2d07f304fb": Object {
      "from": "./Button",
      "importedName": "Btn",
      "name": "Button",
    },
    "c38d1ceb9cd2f7c51c0677442bc017e2": Object {
      "from": "./Toggle",
      "importedName": "Toggle",
      "name": "Toggle",
    },
  },
  "doc": Object {
    "component": "Button",
    "componentsLookup": Object {
      "Button": "a655b73afc93a760272abc2d07f304fb",
      "Toggle": "c38d1ceb9cd2f7c51c0677442bc017e2",
    },
    "date": 2020-10-28T15:50:29.515Z,
    "dateModified": 2020-10-28T15:50:29.515Z,
    "title": "Storybook/MDX",
  },
  "packages": Object {},
  "stories": Object {
    "myStory": Object {
      "component": "Toggle",
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 50,
          "line": 14,
        },
        "start": Object {
          "column": 6,
          "line": 14,
        },
      },
      "name": "my-story",
      "source": "<Story name=\\"my-story\\" component={Toggle} />",
    },
  },
  "transformed": "
    
    import { Meta, Story } from '@component-controls/blocks';
import { Btn as Button } from './Button';
import { Toggle } from './Toggle';

<Meta title=\\"Storybook/MDX\\" component={Button} />

<Story name=\\"my-story\\" component={Toggle} />
",
}
`;

exports[`mdx-component story-subcomponents.mdx 1`] = `
Object {
  "components": Object {
    "3058c83bfd1ea05ca4b611ea98c7f835": Object {
      "from": "../../components/button-default-arrow-func",
      "importedName": "default",
      "imports": Object {
        "react": Array [
          Object {
            "importedName": "default",
            "name": "React",
          },
        ],
      },
      "name": "ArrowButton",
      "request": "/Users/atanasster/cc/core/instrument/test/fixtures/components/button-default-arrow-func.js",
    },
    "37426d3b0c28836644ead936e512dfa6": Object {
      "from": "../../components/button-named-arrow-func",
      "importedName": "Button",
      "imports": Object {
        "react": Array [
          Object {
            "importedName": "default",
            "name": "React",
          },
        ],
      },
      "name": "Button",
      "request": "/Users/atanasster/cc/core/instrument/test/fixtures/components/button-named-arrow-func.js",
    },
  },
  "doc": Object {
    "componentsLookup": Object {
      "ArrowButton": "3058c83bfd1ea05ca4b611ea98c7f835",
      "Button": "37426d3b0c28836644ead936e512dfa6",
    },
    "date": 2020-10-28T15:50:29.516Z,
    "dateModified": 2020-10-28T15:50:29.516Z,
    "title": "Story",
  },
  "packages": Object {},
  "stories": Object {
    "story": Object {
      "component": "ArrowButton",
      "id": "story",
      "loc": Object {
        "end": Object {
          "column": 8,
          "line": 20,
        },
        "start": Object {
          "column": 6,
          "line": 14,
        },
      },
      "name": "story",
      "source": "<Story
  name=\\"story\\"
  component={ArrowButton}
  subcomponents={{
    'My Button Tab': Button,
  }}
/>",
      "subcomponents": Object {
        "My Button Tab": "Button",
      },
    },
  },
  "transformed": "
    
    import { Meta, Story } from '@component-controls/blocks';
import ArrowButton from '../../components/button-default-arrow-func';
import { Button } from '../../components/button-named-arrow-func';

<Meta title=\\"Story\\" />

<Story name=\\"story\\" component={ArrowButton} subcomponents={{ 'My Button Tab': Button }} />

",
}
`;

exports[`mdx-component subcomponents.mdx 1`] = `
Object {
  "components": Object {
    "3058c83bfd1ea05ca4b611ea98c7f835": Object {
      "from": "../../components/button-default-arrow-func",
      "importedName": "default",
      "imports": Object {
        "react": Array [
          Object {
            "importedName": "default",
            "name": "React",
          },
        ],
      },
      "name": "ArrowButton",
      "request": "/Users/atanasster/cc/core/instrument/test/fixtures/components/button-default-arrow-func.js",
    },
    "37426d3b0c28836644ead936e512dfa6": Object {
      "from": "../../components/button-named-arrow-func",
      "importedName": "Button",
      "imports": Object {
        "react": Array [
          Object {
            "importedName": "default",
            "name": "React",
          },
        ],
      },
      "name": "Button",
      "request": "/Users/atanasster/cc/core/instrument/test/fixtures/components/button-named-arrow-func.js",
    },
  },
  "doc": Object {
    "component": "ArrowButton",
    "componentsLookup": Object {
      "ArrowButton": "3058c83bfd1ea05ca4b611ea98c7f835",
      "Button": "37426d3b0c28836644ead936e512dfa6",
    },
    "date": 2020-10-28T15:50:29.516Z,
    "dateModified": 2020-10-28T15:50:29.516Z,
    "subcomponents": Object {
      "Button": "Button",
    },
    "title": "Story",
  },
  "packages": Object {},
  "stories": Object {},
  "transformed": "
    
    import { Meta, Story } from '@component-controls/blocks';
import ArrowButton from '../../components/button-default-arrow-func';
import { Button } from '../../components/button-named-arrow-func';

<Meta title=\\"Story\\" component={ArrowButton} subcomponents={{ Button }} />

",
}
`;
